Fix some z-index

--- a/src/css/layout/ScrollbarLayout.css
+++ b/src/css/layout/ScrollbarLayout.css
@@ -41,7 +41,7 @@
   left: 0;
   overflow: hidden;
   position: absolute;
-  z-index: 1;
+  z-index: 2;
   /*transition-duration: 250ms;*/
   /*transition-timing-function: ease;*/
   /*transition-property: background-color width position;*/
