--- a/src/css/layout/fixedDataTableColumnResizerLineLayout.css
+++ b/src/css/layout/fixedDataTableColumnResizerLineLayout.css
@@ -21,7 +21,7 @@
   border-right-width: 1px;
   box-sizing: border-box;
   position: absolute;
-  z-index: 10;
+  z-index: 11;
 }
 
 body[dir="rtl"] .fixedDataTableColumnResizerLineLayout/main {
