--- a/src/css/layout/fixedDataTableLayout.css
+++ b/src/css/layout/fixedDataTableLayout.css
@@ -34,7 +34,7 @@
   left: 0;
   position: absolute;
   right: 0;
-  z-index: 1;
+  z-index: 2;
 }
 
 .fixedDataTableLayout/bottomShadow {
